--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,6 @@
 /* This is the main styles file for the DevWeek project */
 
-/* Install Lato font */
+/* INSTALL Lato FONT */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
 /* GLOBAL VARIABLES */
@@ -20,7 +20,9 @@
   --secondary-color: #303136;
   --gray-color: #949597;
   --light-gray-color: #c1c2c4;
+  --very-light-gray-color: #efefef;
   --light-white-color: #f5f5f5;
+  --almost-white-color: #fcfcfc
 }
 
 /* RESET DEFAULT BROWSER STYLES */
@@ -32,6 +34,7 @@
   box-sizing: border-box;
 }
 
+/* GENERAL SETTINGS */
 html {
   font-size: 62.5%;
   font-family: var(--primary-font);
@@ -45,35 +48,160 @@ body {
 
 .container {
   width: 100%;
-  max-width: 100rem;
+  /* max-width: 100rem; */
   padding: 0 1.4rem;
   margin: 0 auto;
 }
 
-.banner {
+img {
   width: 100%;
 }
 
+.btn {
+  background-color: var(--primary-color);
+  text-decoration: none;
+  color: #fff;
+  font-weight: var(--bold-weight);
+  padding: 1.5em 3em;
+  display: block;
+  margin: 2.5em 10%;
+}
+
+/* HEADLINE STYLES */
+#headline {
+  padding: 2rem 0;
+}
+
+.banner {
+  width: 100%;
+  height: 60rem;
+  background-image:
+    linear-gradient(
+      rgba(253, 253, 253, 0.88),
+      rgba(253, 253, 253, 0.88)) ,
+      url(./bgimgs/banner.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+.banner h1 {
+  font-size: 3.5rem;
+  font-weight: var(--black-weight);
+  color: var(--primary-color);
+  line-height: 3.5rem;
+  letter-spacing: 0.1rem;
+  background: url(./bgimgs/banner-inked.jpg);
+  background-position: -15% 55%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.banner .slogan {
+  font-size: 2.2rem;
+  font-weight: var(--bold-weight);
+  color: var(--primary-color);
+  line-height: 3.4rem;
+  margin-top: 5rem;
+}
+
+.banner .event-text {
+  background-color: var(--very-light-gray-color);
+  border: 3px solid #fff;
+  padding: 2rem;
+  line-height: 2.5rem;
+  margin: 2rem 0;
+}
+
+.banner .event-date {
+  font-size: 3rem;
+  font-weight: var(--black-weight);
+  letter-spacing: 0.1rem;
+  margin-bottom: 0.8rem;
+}
+
+.banner .event-place {
+  font-size: 1.8rem;
+  font-weight: var(--bold-weight);
+}
+
+/* MAIN PROGRAM STYLES */
 #program {
   background-color: var(--secondary-color);
   padding: 2rem 0;
   color: var(--light-gray-color);
 }
 
+#program h2 {
+  color: #fff;
+  font-weight: var(--bold-weight);
+  font-size: 2.2rem;
+  text-align: center;
+  padding: .7em;
+}
+
+#program hr {
+  width: 10%;
+  margin: 0 auto;
+  border: 1px solid var(--primary-color);
+}
+
 #program span {
-  color: var(--primary-color);
-  font-weight: var(--black-weight);
+}
+
+#program ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 3rem auto;
 }
 
 #program ul li{
   list-style: none;
-  padding: 1.5rem 1rem;
+  padding: 0 1.6rem;
+  height: 9rem;
+  background-color: rgba(253, 253, 253, 0.05);
+  display: flex;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  align-items: center;
+  gap: 4%;
 }
+
+#program ul li span {
+  display: inline-block;
+  width: 8.5%;
+}
+
+#program ul li strong {
+  color: var(--primary-color);
+  font-weight: var(--black-weight);
+  width: 20%;
+}
+
+#program ul li p {
+  width: 65%;
+}
+
 /* MEDIA QUERIES START HERE */
 
 /* Styles for 768px and above screen size */
 @media screen and (min-width: 768px) {
+  /* GENERAL SETTINGS */
   html {
     background-color: #fff;
   }
+
+  .container {
+    max-width: 100rem;
+  }
+
 }
