--- a/assets/styles.css
+++ b/assets/styles.css
@@ -67,6 +67,9 @@ img {
   margin: 2.5em 10%;
   font-size: 1.8rem;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* HEADLINE STYLES */
@@ -139,7 +142,8 @@ p {
 }
 
 #program h2,
-#speakers h2 {
+#speakers h2,
+#partners h2 {
   color: #fff;
   font-weight: var(--bold-weight);
   font-size: 2.2rem;
@@ -148,7 +152,8 @@ p {
 }
 
 #program hr,
-#speakers hr {
+#speakers hr,
+#partners hr {
   width: 10%;
   margin: 0 auto;
   border: 1px solid var(--primary-color);
@@ -241,14 +246,14 @@ p {
 
 .speaker-info strong {
   font-weight: var(--black-weight);
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   letter-spacing: 0.05rem;
 }
 
 .speaker-info span {
   font-weight: var(--bold-weight);
   color: var(--primary-color);
-  font-size: 1.4rem;
+  font-size: 1.45rem;
 }
 
 .speaker-info p {
@@ -259,7 +264,7 @@ p {
 #speakers .speaker-dash {
   width: 6%;
   margin: 0 0 0.5em;
-  border: 1px solid var(--light--color);
+  border: 1px solid var(--light-gray-color);
 }
 
 .btn-more {
@@ -267,13 +272,91 @@ p {
   margin: 0;
   background-color: transparent;
   border: 2px solid var(--light-gray-color);
-  color: var(--gray-color);
+  color: var(--secondary-color);
   font-size: 1.5rem;
   padding: 1em;
-  background-image: url(./icons/arrow-down.svg);
-  background-repeat: no-repeat;
-  background-position: 10px 10px;
 }
+
+.btn-more .arrow-down {
+  display: inline-block;
+  background: url('./icons/arrow-down.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 1em;
+  height: 1em;
+  margin-left: 0.5em;
+}
+
+/* PARTNERS */
+#partners {
+  padding: 2rem 0;
+  background-color: var(--secondary-color);
+}
+
+#partners h2 {
+  color: #fff;
+}
+
+.partners-logos {
+  justify-content: space-evenly;
+  margin: 3rem 1rem;
+}
+
+.partners-logos ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 4%;
+}
+
+.partners-logos .partner-logo {
+  display: inline-block;
+  width: 28%;
+  padding: 0.5em;
+}
+
+#partners img {
+  width: 100%;
+}
+
+#partners .darker-imgs {
+  background-color:
+    linear-gradient(
+      rgba(200, 200, 200, 0.88),
+      rgba(200, 200, 200, 0.88));
+  position: absolute;
+  height: 10rem;
+  width: 100%;
+  z-index: 2;
+}
+
+/* FOOTER */
+#footer {
+  padding: 3rem 0;
+}
+
+#footer .footer-text {
+  display: flex;
+  width: 100%;
+  gap: 10%;
+  justify-content: center;
+  align-items: center;
+}
+
+#footer img {
+  width: 15%;
+  padding: 0.5em;
+}
+
+#footer p {
+  width: 40%;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  font-weight: var(--bold-weight);
+}
+
 /* MEDIA QUERIES START HERE */
 
 /* Styles for 768px and above screen size */
